Algumas pequenas atualizações, falta o js

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
             </a>
 
             </div>
-            <!--menu-->
-
+            <!--menu-desktop-->
+            <div class="menu-mobile">
+                <i class="fas fa-bars"></i>
+            </div>
 
         </div>
         <!--center-->
@@ -121,6 +123,27 @@
     </section>
     <!--sobre-->
 
+    <section class="conquistas">
+        <div class="center">
+            <div class="conquista-single">
+                <h2>+100 mil</h2>
+                <p>Alunos</p>
+            </div>
+            <div class="conquista-single">
+                <h2>+100 mil</h2>
+                <p>Alunos</p>
+            </div>
+            <div class="conquista-single">
+                <h2>+100 mil</h2>
+                <p>Alunos</p>
+            </div>
+            <div class="conquista-single">
+                <h2>+100 mil</h2>
+                <p>Alunos</p>
+            </div>
+        </div>
+
+    </section>
 
 </body>
 
